# ctrader-rs

./: .env  Cargo.toml  README.md  build.rs
config/: default.toml  prod.toml
examples/: client.rs
protos/: OpenApiCommonMessages.proto  OpenApiCommonModelMessages.proto  OpenApiMessages.proto  OpenApiModelMessages.proto
src/: error.rs  lib.rs  traits.rs  types.rs
src/client/: auth.rs  connector.rs  endpoint.rs  mod.rs  receiver.rs  sender.rs
src/proto_messages/: OpenApiCommonMessages.rs  OpenApiCommonModelMessages.rs  OpenApiMessages.rs  OpenApiModelMessages.rs  mod.rs
