
#
#
#
#
#
#
#
#


[package]
name = "ctrader-rs"
version = "0.1.0"
edition = "2024"
readme = "README.md"
rust-version = "1.92.0"
license = "Apache-2.0"
categories = ["api-bindings", "finance"]
description = "An OpenAPI implementation library written in rust."
keywords = ["ctrader", "forex", "trading", "api", "websocket"]
documentation = "https://docs.rs/ctrader-rs"
repository = "https://github.com/cowanweks/ctrader-rs"


[lib]
name = "ctrader_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
tracing = "0.1.44"
thiserror = "2.0"
async-trait = "0.1"
serde_json = "1.0.149"
futures-util = "0.3.31"
futures-channel = "0.3.31"
tracing-subscriber = "0.3.22"
prost = "0.14"
# Only necessary if using Protobuf well-known types:
prost-types = "0.14"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
protobuf = { version = "3.7.2", features = ["with-bytes"]}
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tokio-tungstenite-typed = { version = "0.1.1", features = [
    "native-tls",
    "json",
    "serde_json",
] }
tonic = "0.14.3"
quacky = "0.2.20251024"

[dev-dependencies]
config = "0.15.19"

[build-dependencies]
anyhow = "1.0"
tonic-prost-build = "0.14.3"
